syntax = "proto3";

package session.pb;

message SessionLastMessage {
    string username = 1;
    string content = 2;
}